--- a/application/index/view/Site/index.html
+++ b/application/index/view/Site/index.html
@@ -16,30 +16,42 @@
        <div class="col-xs-3" style="padding-left: 0;">
            <input class="form-control" name="files"  type="file" id="files"/>
        </div>
-       <div class="col-xs-3"><button class="btn btn-primary" type="button" onclick="uploadImage()"><i class="glyphicon glyphicon-upload"></i>&nbsp;上传</button></div>
+       <div class="col-xs-3"><button class="btn btn-primary" id="upolad_btn" type="button"><i class="glyphicon glyphicon-upload"></i>&nbsp;上传</button></div>
+    </div>
+    <div class="row" style="margin:15px 0px; display: none" id="urlList">
+        <div class="col-xs-4">
+            <strong id="urls"></strong><strong class="iMessgae" style="color: #2aabd2; margin-left: 30px; font-size: 12px;"></strong>
+        </div>
+        <div class="col-xs-1"><i class="glyphicon glyphicon-remove"></i></div>
     </div>
 </div>
 </body>
 
 <script>
-    function uploadImage() {
-        var file =  document.getElementById("files").files[0];
-        var data = new FormData();
-        data.append('files',file);
-        $.ajax({
-            url: "/index/site/upload",
-            type: "post",
-            data: data,
-            contentType: false,
-            processData: false,
-            mimeType: "multipart/form-data",
-            success: function (data) {
-                console.log(data);
-            },
-            error: function (data) {
-                alert('上传失败!')
-            }
+
+    $(document).ready(function(){
+        $("#upolad_btn").click(function(){
+            var file =  document.getElementById("files").files[0];
+            var data = new FormData();
+            data.append('files',file);
+            $.ajax({
+                url: "/index/site/upload",
+                type: "post",
+                data: data,
+                contentType: false,
+                processData: false,
+                mimeType: "multipart/form-data",
+                success: function (data) {
+                    $("#urls").append(file.name);
+                    $(".iMessgae").append('文件上传成功');
+                    $("#urlList").show();
+                },
+                error: function (data) {
+                    alert('上传失败!')
+                }
+            });
         });
-    }
+    });
+
 </script>
 </html>
